chapter-02/k8s/1000-myburgh-sg/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myburgh-sg
  labels:
    app.kubernetes.io/part-of: myburgh-sg
