chapter-02/k8s/1000-myburgh-sg/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: myburgh-sg
spec:
  selector: { app: site }
  ports:
    - name: http
      port: 80
      targetPort: http
