chapter-02/k8s/1000-myburgh-sg/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site
  namespace: myburgh-sg
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: myburgh-sg-force-https-naked@kubernetescrd
spec:
spec:
  ingressClassName: traefik
  rules:
    - host: myburgh.sg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site
                port:
                  number: 80
    - host: www.myburgh.sg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site
                port:
                  number: 80
  tls:
    - hosts:
        - myburgh.sg
        - www.myburgh.sg
      secretName: myburgh-sg-tls
